crates/alder-parse/src/snapshots/alder_parse__statement__tests__block_empty.snap
---
source: crates/alder-parse/src/statement.rs
description: "{}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Block {
        stmts: [],
        tail: None,
    },
}
