crates/alder-parse/src/snapshots/alder_parse__statement__tests__block_looks_like_record_hint.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ x: 1 }"
---
LooksLikeRecord(
    1,
    3,
)
