crates/alder-parse/src/snapshots/alder_parse__statement__tests__block_nested.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    {\n        let y = x\n        y\n    }\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 6,
            column: 2,
        },
    },
    value: Block {
        stmts: [],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 6,
                    },
                },
                value: Block(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 5,
                                column: 6,
                            },
                        },
                        value: Block {
                            stmts: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 18,
                                        },
                                    },
                                    value: Let(
                                        LetDecl {
                                            pattern: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 3,
                                                        column: 13,
                                                    },
                                                    end: Position {
                                                        line: 3,
                                                        column: 14,
                                                    },
                                                },
                                                value: Var(
                                                    "y",
                                                ),
                                            },
                                            annotation: None,
                                            value: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 3,
                                                        column: 17,
                                                    },
                                                    end: Position {
                                                        line: 3,
                                                        column: 18,
                                                    },
                                                },
                                                value: Var(
                                                    "x",
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            tail: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 4,
                                            column: 10,
                                        },
                                    },
                                    value: Var(
                                        "y",
                                    ),
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    },
}
