crates/alder-parse/src/snapshots/alder_parse__statement__tests__block_shorthand_record_hint.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ x, y }"
---
LooksLikeRecord(
    1,
    3,
)
