crates/alder-parse/src/snapshots/alder_parse__statement__tests__block_spread_record_hint.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ ..r }"
---
LooksLikeRecord(
    1,
    3,
)
