crates/alder-parse/src/snapshots/alder_parse__statement__tests__block_stmt_and_tail.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    let y = x + 1\n    y\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 18,
                    },
                },
                value: Let(
                    LetDecl {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 9,
                                },
                                end: Position {
                                    line: 2,
                                    column: 10,
                                },
                            },
                            value: Var(
                                "y",
                            ),
                        },
                        annotation: None,
                        value: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 13,
                                },
                                end: Position {
                                    line: 2,
                                    column: 18,
                                },
                            },
                            value: BinOps {
                                operands: [
                                    BinOpOperand {
                                        expr: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 13,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 14,
                                                },
                                            },
                                            value: Var(
                                                "x",
                                            ),
                                        },
                                        op: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 15,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 16,
                                                },
                                            },
                                            value: Add,
                                        },
                                    },
                                ],
                                last: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 17,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 18,
                                        },
                                    },
                                    value: Number(
                                        NumberLit {
                                            value: 1.0,
                                            text: "1",
                                        },
                                    ),
                                },
                            },
                        },
                    },
                ),
            },
        ],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 6,
                    },
                },
                value: Var(
                    "y",
                ),
            },
        ),
    },
}
