crates/alder-parse/src/snapshots/alder_parse__statement__tests__block_tag_stmt_after_name.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    x\n    :timeout\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 6,
                    },
                },
                value: Expr(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 6,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                ),
            },
        ],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 13,
                    },
                },
                value: Tag {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 13,
                            },
                        },
                        value: "timeout",
                    },
                    args: [],
                },
            },
        ),
    },
}
