crates/alder-parse/src/snapshots/alder_parse__statement__tests__block_tail_only.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ x }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Block {
        stmts: [],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: Var(
                    "x",
                ),
            },
        ),
    },
}
