crates/alder-parse/src/snapshots/alder_parse__statement__tests__break_bare.snap
---
source: crates/alder-parse/src/statement.rs
description: break
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Break(
        None,
    ),
}
