crates/alder-parse/src/snapshots/alder_parse__statement__tests__break_value.snap
---
source: crates/alder-parse/src/statement.rs
description: break next
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Break(
        Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: Var(
                    "next",
                ),
            },
        ),
    ),
}
